[IWB Toolbar] Fixed Stand and Hide Area functions on mobile devices

--- a/addons/IWB_Toolbar/src/style.css
+++ b/addons/IWB_Toolbar/src/style.css
@@ -588,6 +588,14 @@
     content: 'Thickness';
 }
 
+#tmp_canvas {
+    -ms-touch-action: none;
+}
+
+canvas {
+    -ms-touch-action: none;
+}
+
 .confirmation-remove-note > span:after {
      content: 'Are you sure to remove this note?';
 }
